sort.pancake.BubblePancake.scala.error
Erreur de compilation :
BubblePancake:5: error: not found: value getNombreCrepe
    while (crepe!=getNombreCrepe())
                  ^