sort.pancake.BubblePancake.scala.code
def solve() {
  while(estTriee==false){
    var crepe=0
    while (crepe!=getNombreCrepe())
    if (getRayonCrepe(crepe)>getRayonCrepe(crepe+1)){
      retourne(crepe+1)
    }
    crepe+=1 
  }
}